<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icodemografia"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demografia"
                android:textSize="35dp"
                android:textColor="#ff0202ae"
                android:layout_weight="0.5"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                />

        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datostamesis"
            android:textSize="20dp"
            android:textColor="#ffd8be08"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/demografia" />


        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/fundacion"
            android:textColor="#ff000000"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/eleccion"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/fundador"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/otrosnombres"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/poblacion"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/gentilicio"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/clima"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/extension"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/altura"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/distancia"
            android:textColor="#ff000000"
            />
        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/economia"
            android:textColor="#ff000000"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banderayescudo"
            android:textSize="20dp"
            android:textColor="#ffd8be08"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"


            />


        <TextView
            android:layout_marginLeft="10dp"
            style="@style/textviewbode"
            android:text="@string/simbolos"
            android:textColor="#ff000000"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/banderaescudo"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/mapa"
            />

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/describandera"
            android:textColor="#ff000000"
            android:layout_marginTop="3dp"
            />




        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiestas"
            android:textSize="20dp"
            android:textColor="#ffd8be08"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/cacao"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/descrifiestas"
            android:textColor="#ff000000"
            />


        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return1"
            android:onClick="menu_principal"
            android:layout_gravity="center"
            />


    </LinearLayout>
</ScrollView>