<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icositios" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitiosdeinteres"
                android:textSize="30dp"
                android:textColor="#ff0202ae"
                android:layout_weight="0.5"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/colage" />



        <TextView
            style="@style/textviewbode"
            android:text="@string/descripcionsitios"
            android:textColor="#ff000000"
            android:layout_marginTop="20dp"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitiosrecomendados"
            android:textSize="20dp"
            android:textColor="#ffd8be08"
            android:layout_weight="0.5"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/numeracion" />

            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/cristorey"
                android:textColor="#ff1a01db"
                />


        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/cristorey"
            />


        <TextView
            android:layout_marginLeft="5dp"
            style="@style/textviewbode"
            android:text="@string/descricristorey"
            android:textColor="#ff1a01db"
            />

    </LinearLayout>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/numeracion" />

            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/petroglifos"
                android:textColor="#ff1a01db"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/petroglifos"
                />


            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/descripetroglifos"
                android:textColor="#ff1a01db"
                />

        </LinearLayout>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/numeracion" />

            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/aventura"
                android:textColor="#ff1a01db"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/aventura"
                />


            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/descriaventura"
                android:textColor="#ff1a01db"
                />

        </LinearLayout>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otrossitiosrecomendados"
            android:textSize="20dp"
            android:textColor="#ffd8be08"
            android:layout_weight="0.5"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/numeracion" />

            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/casacultura"
                android:textColor="#ff1a01db"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >


            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/descricasacultura"
                android:textColor="#ff1a01db"
                />

        </LinearLayout>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />








        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/numeracion" />

            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/valleriofrio"
                android:textColor="#ff1a01db"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >


            <TextView
                android:layout_marginLeft="5dp"
                style="@style/textviewbode"
                android:text="@string/descrivalleriofrio"
                android:textColor="#ff1a01db"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            >


        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />



        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/return1"
            android:onClick="menu_principal"
            android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>